--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.0.6</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
+		<relativePath/>
+</parent>
 	<groupId>com.starter</groupId>
 	<artifactId>register-center-backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
